Fixed page overflow

--- a/app/style.css
+++ b/app/style.css
@@ -3,7 +3,7 @@ webview {
   top: 2em;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 96%;
   display: inline-flex !important;
   margin: 0;
   padding: 0;
